infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  # selector: find a pod that match the label <app:posts>
  selector:
    matchLabels:
      app: posts
  # template: specify the configuration of pod that we want the deployment to create
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          # image: olivialu314/posts:0.0.1
          # to avoid change of config file every update
          image: olivialu314/posts:latest
