infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  # name of the service
  name: post-srv
# specify how the service gonna behave
# NodePort: expose pods to the outside world
spec:
  type: NodePort
  # select which port you are going to expose to the outside world
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      # incoming port of NodePort service
      port: 4000
      # incoming port of the pod(where we want to send traffic to)
      targetPort: 4000
