infra/k8s/ingress-srv.yaml
# the address of this ingress controller: http://posts.com/posts
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
spec:
  ingressClassName: nginx
  # routing rules we want to apply
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-srv
                # incoming port of posts-clusterip-srv
                port:
                  number: 4000
